WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96074
[EFL][WK2] Minibrowser locks up when right clicking editable filed
https://bugs.webkit.org/show_bug.cgi?id=96074
Summary
[EFL][WK2] Minibrowser locks up when right clicking editable filed
Jinwoo Song
Reported
2012-09-06 23:24:49 PDT
Minibrowser locks up when we click the input filed or text area with right mouse button.
Attachments
patch
(2.50 KB, patch)
2012-09-08 22:24 PDT
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Song
Comment 1
2012-09-08 22:24:04 PDT
Created
attachment 162977
[details]
patch WebProcess crashes when the context menu type is SubmenuType and non-CROSS_PLATFORM_CONTEXT_MENUS is used. It is because platformSubMenu() in the ContextMenuItemEfl.cpp returns null. This patch implements the setSubMenu() and platformSubMenu() to set and return the subMenuItems.
Gyuyoung Kim
Comment 2
2012-09-09 19:23:24 PDT
Comment on
attachment 162977
[details]
patch Looks good to me because EFL port also uses Vector class for context menu item as chromium port.
WebKit Review Bot
Comment 3
2012-09-09 19:33:17 PDT
Comment on
attachment 162977
[details]
patch Clearing flags on attachment: 162977 Committed
r128011
: <
http://trac.webkit.org/changeset/128011
>
WebKit Review Bot
Comment 4
2012-09-09 19:33:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug