[EFL][WK2] Minibrowser locks up when right clicking editable filed https://bugs.webkit.org/show_bug.cgi?id=96074

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-09-09
Reviewed by Gyuyoung Kim.

WebProcess crashes when the context menu type is SubmenuType and non-CROSS_PLATFORM_CONTEXT_MENUS is used.
It is because platformSubMenu() in the ContextMenuItemEfl.cpp returns null. This patch implements the setSubMenu()
and platformSubMenu() to set and return the subMenuItems.

* platform/efl/ContextMenuItemEfl.cpp:
(WebCore::ContextMenuItem::setSubMenu):
(WebCore::ContextMenuItem::platformSubMenu):
(WebCore):

Canonical link: https://commits.webkit.org/114106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128011 268f45cc-cd09-0410-ab3c-d52691b4dbfc